--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "myfirstdiscordbot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ."
   },
   "keywords": [],
-  "author": "",
+  "author": "Bleu Westberg",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@discordjs/rest": "^1.5.0",
+    "chalk": "^4.1.2",
+    "discord-api-types": "^0.37.25",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3"
+  }
 }
